Improved ux for multiple repositories

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -284,25 +284,6 @@
       to { transform: rotate(360deg); }
     }
 
-    #breadcrumb {
-      font-size: 12px;
-      color: #888;
-      margin-bottom: 12px;
-      display: none;
-    }
-
-    #breadcrumb.visible {
-      display: block;
-    }
-
-    #breadcrumb span {
-      cursor: pointer;
-      color: #4ecdc4;
-    }
-
-    #breadcrumb span:hover {
-      text-decoration: underline;
-    }
   </style>
 </head>
 <body>
@@ -329,11 +310,7 @@
 
     <div class="view-toggle">
       <button id="view-repos" class="active">Repositories</button>
-      <button id="view-dirs">Directories</button>
-    </div>
-
-    <div id="breadcrumb">
-      <span id="breadcrumb-root">All Repos</span> / <span id="breadcrumb-current"></span>
+      <button id="view-dirs">City Blocks</button>
     </div>
 
     <div id="repo-list"></div>
