Added a docker build and updated UX

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -308,6 +308,14 @@
 
     <div class="divider"></div>
 
+    <div class="input-group">
+      <label>Scan Directory for Repos</label>
+      <input type="text" id="scan-path" placeholder="/path/to/projects">
+    </div>
+    <button class="btn btn-secondary" id="scan-dir">Scan All Subdirectories</button>
+
+    <div class="divider"></div>
+
     <div class="view-toggle">
       <button id="view-repos" class="active">Repositories</button>
       <button id="view-dirs">City Blocks</button>
